--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="content">
-      <h1><a href="/">vietoss</a></h1>
+      <h1><a href="/">manhhung</a></h1>
       <h2>Lỗi không tìm thấy</h2>
       <p>Thử tìm kiếm lại:</p>
       <form action="http://www.google.com/cse" id="cse-search-box">
